# wsgi_lineprof

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.rst  appveyor.yml  asv.conf.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: benchmarks.yml  packaging.yml  pythonpackage.yml  tests.yml
benchmarks/: apps.py  benchmarks.py  extension.py  filters.py  utils.py  writers.py
docs/: .readthedocs.yaml  conf.py  configuration.rst  examples.rst  index.rst  quickstart.rst  reference.rst  special-thanks.rst  usage.rst
examples/: bottle1.py  bottle2.py  fib.py  fib_with_buffer.py  wsgiref.py  wsgiref1.py  wsgiref2.py
extensions/: _wsgi_lineprof.c  extensions.c  extensions.cpp  extensions.pyx  header.pxd  line_profiler.c  line_profiler.pyx  timer.c  timer.cpp  timer.h
scripts/: build_manylinux.sh  build_manylinux1.sh  build_manylinux1_wrapper.sh  build_manylinux_wrapper.sh  build_osx_wheel.sh
tests/: test_app.py  test_c_line_profiler.py  test_profiler.py  test_writers.py
wsgi_lineprof/: app.py  extensions.pyi  filters.py  formatter.py  middleware.py  profiler.py  stats.py  types.py  writers.py
wsgi_lineprof/templates/: base.html  detail.html  index.html
